--- a/_data/t.yml
+++ b/_data/t.yml
@@ -1,41 +1,49 @@
 ---
 ## Main icon
-icon: "/assets/images/b.svg"
+icon: 
+  en: "/assets/images/logo-world-en.png"
+  it: "/assets/images/logo-world-it.png"
 
 ## Social Card [1200x630]
 social-card: /assets/images/favicons/social-card.png
 
 ## Site name
 name:
-  en: "A Jekyll theme"
-  it: "Un tema Jekyll"
+  en: "Rabbit hole for Italy"
+  it: "Tana per l'Italia"
 
 ## Site description
 description:
-  en: "A website with a Jekyll theme"
-  it: "Sito di esempio per il tema Jekyll"
+  en: "Your digital agency for projects with Rabbit and more..."
+  it: "La tua agenzia digitale per progetti con Rabbit e non solo..."
 
 ## Site author
 author:
-  en: "Digital Transformation Team"
-  it: "Team per la Trasformazione Digitale"
+  en: "Rabbit World Team"
+  it: "Team Mondo Rabbit"
 
 ## Social
 social-links:
   en:
     twitter:
       name: "twitter"
-      url: "https://twitter.com/ITdigitalteam"
-    medium:
-      name: "medium"
-      url: "https://medium.com/team-per-la-trasformazione-digitale/"
+      url: "https://x.com/AssistedProfile"
+    linkedin:
+      name: "linkedin"
+      url: "https://www.linkedin.com/in/davide-savo/?locale=en_US"
+    youtube:
+      name: "youtube"
+      url: "https://www.youtube.com/@Assisted-World"
   it:
     twitter:
       name: "twitter"
-      url: "https://twitter.com/teamdigitaleIT"
-    medium:
-      name: "medium"
-      url: "https://medium.com/team-per-la-trasformazione-digitale/"
+      url: "https://x.com/AssistedProfile"
+    linkedin:
+      name: "linkedin"
+      url: "https://www.linkedin.com/in/davide-savo/"
+    youtube:
+      name: "youtube"
+      url: "https://www.youtube.com/@Assisted-World"
 
 ## Labels
 italian-version:
@@ -48,8 +56,8 @@ cookie-policy-info:
   en: "This site uses technical, analytics and third-party cookies <br>By continuing to browse, you accept the use of cookies."
   it: "Questo sito utilizza cookie tecnici, analytics e di terze parti.<br>Proseguendo nella navigazione accetti l’utilizzo dei cookie."
 cookie-policy-accept-btn:
-  en: "Ok"
-  it: "Accetto"
+  en: "Allow"
+  it: "Consenti"
 footer-links:
   en:
     privacy-policy:
