--- a/_data/t.yml
+++ b/_data/t.yml
@@ -26,6 +26,9 @@ social-links:
     twitter:
       name: "twitter"
       url: "https://x.com/AssistedProfile"
+    github:
+      name: "github"
+      url: "https://github.com/Rabbit-World"
     linkedin:
       name: "linkedin"
       url: "https://www.linkedin.com/in/davide-savo/?locale=en_US"
@@ -36,6 +39,9 @@ social-links:
     twitter:
       name: "twitter"
       url: "https://x.com/AssistedProfile"
+    github:
+      name: "github"
+      url: "https://github.com/Rabbit-World"
     linkedin:
       name: "linkedin"
       url: "https://www.linkedin.com/in/davide-savo/"
