--- a/_data/t.yml
+++ b/_data/t.yml
@@ -7,8 +7,8 @@ social-card: /assets/images/favicons/social-card.png
 
 ## Site name
 name:
-  en: "Rabbit hole for Italy"
-  it: "Tana per l'Italia"
+  en: "Rabbit hole for Worldwide"
+  it: "Tana per il Mondo"
 
 ## Site description
 description:
