--- a/assets/images/favicons/manifest.json
+++ b/assets/images/favicons/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ministro per l’innovazione tecnologica e la digitalizzazione",
+  "name": "MID",
   "short_name": "MID",
   "icons": [
     {
