--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ noindex: true
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus:
+disqus: "dodarabbit"
 
 # Enter your Google Analytics web tracking code (e.g. UA-000000000-0) to activate tracking
 google_analytics:
@@ -26,7 +26,7 @@ url: "https://rabbit-world.github.io"
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/euro-agency"
+baseurl: "/euro-agency/en"
 
 #
 # !! You don't need to change any of the configuration flags below !!
