--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ url: "https://rabbit-world.github.io"
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/euro-agency/en"
+baseurl: "/euro-agency"
 
 #
 # !! You don't need to change any of the configuration flags below !!
