--- a/assets/images/favicons/manifest.json
+++ b/assets/images/favicons/manifest.json
@@ -39,7 +39,7 @@
       "density": "4.0"
     }
   ],
-  "start_url": "/",
+  "start_url": "/euro-agency",
   "background_color": "#0066CC",
   "display": "browser",
   "theme_color": "#0066CC"
