--- a/_data/t.yml
+++ b/_data/t.yml
@@ -90,4 +90,7 @@ footer-links:
       name: "Informativa sui Cookie"
       url: "/it/cookie-policy"
 
+date_label:
+  en: "Written on"
+  it: "Scritto il"
 
