--- a/_config.yml
+++ b/_config.yml
@@ -80,6 +80,6 @@ read_label:
   en: "Read more..."
   it: "Leggi di più..."
   
-follow_label:
+example_label:
   en: "Example link"
   it: "Link di esempio"
